<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="coin_grades">
        <item>Grade:</item>
        <item>P-1</item>
        <item>FR-2</item>
        <item>AG-3</item>
        <item>G-4</item>
        <item>G-6</item>
        <item>VG-8</item>
        <item>VG-10</item>
        <item>F-12</item>
        <item>F-15</item>
        <item>VF-20</item>
        <item>VF-25</item>
        <item>VF-30</item>
        <item>VF-35</item>
        <item>EF-40</item>
        <item>EF-45</item>
        <item>AU-50</item>
        <item>AU-53</item>
        <item>AU-55</item>
        <item>AU-58</item>
        <item>MS-60</item>
        <item>MS-61</item>
        <item>MS-62</item>
        <item>MS-63</item>
        <item>MS-64</item>
        <item>MS-65</item>
        <item>MS-66</item>
        <item>MS-67</item>
        <item>MS-68</item>
        <item>MS-69</item>
        <item>MS-70</item>
        <item>PF-60</item>
        <item>PF-61</item>
        <item>PF-62</item>
        <item>PF-63</item>
        <item>PF-64</item>
        <item>PF-65</item>
        <item>PF-66</item>
        <item>PF-67</item>
        <item>PF-68</item>
        <item>PF-69</item>
        <item>PF-70</item>
    </string-array>
    <string-array name="coin_quantities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>25+</item>
    </string-array>
    <string name="lock_collection">Lock</string>
    <string name="lock_collection_adv">Save</string>
    <string name="unlock_collection">Edit</string>
    <string name="coin_slot_description">Coin Image</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_coin_type">Select Coin Type</string>
    <string name="select_grade">Grade</string>
    <string name="select_quantity">Quantity</string>
    <string name="select_image">Coin Image</string>
    <string name="unsaved_message">Unsaved Changes</string>
    <string name="notes">Notes</string>
    <string name="change_view_string">Change Views</string>
    <string name="save_string">Save</string>
    <string name="simple_view_string">Basic View</string>
    <string name="advanced_view_string">Advanced View</string>
    <string name="okay_exp">Okay!</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="img_default">Default</string>
    <string name="collection_completion_template">%1$d/%2$d"</string>
    <string name="collection_complete">Collection Complete!</string>
    <string name="select_collection_name">Select a new collection name</string>
    <string name="view">View</string>
    <string name="toggle_collected">Toggle Collected</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="warning">Warning!</string>
    <string name="toggle_search">Toggle Search</string>
    <string name="search_hint">Search coins&#8230;</string>
    <string name="tutorial_search_feature">You can now search for coins in your collection! Tap the magnifying glass icon or tap Toggle Search in the three dots menu.</string>
    <string name="add_coin">Add Coin</string>
    <string name="app_name">Coin Collection</string>
    <string name="create_new_collection">New Collection</string>
    <string name="intro_message">Thanks for downloading Coin Collection!\nTo get started, select \'New Collection\'</string>
    <string name="tutorial_more_options">Press and hold on a collection to view, edit, copy, and more!</string>
    <string name="delete_collection">Delete Collection</string>
    <string name="import_collection">Import Collection</string>
    <string name="export_collection">Export Collection</string>
    <string name="reorder_collection">Reorder Collections</string>
    <string name="rename_collection">Rename Collections</string>
    <string name="app_info">App Info</string>
    <string name="select_collection_delete">Select a collection to delete</string>
    <string name="collection_actions">Collection Actions</string>
    <string name="coin_actions">Coin Actions</string>
    <string name="copy_name_suffix">\ Copy</string>
    <string name="opening_database">Opening Databases…</string>
    <string name="importing_collections">Importing Collections…</string>
    <string name="exporting_collections">Exporting Collections…</string>
    <string name="import_place_message">Where would you like to import from?</string>
    <string name="export_format_message">Select an export file format:</string>
    <string name="json_file">JSON file</string>
    <string name="csv_file">CSV file (table format)</string>
    <string name="legacy_storage">Legacy Storage (going away)</string>
    <string name="pick_backup_file">Pick Back-Up File</string>
    <string name="info_name_version">Coin Collection v%1$s</string>
    <string name="info_github">github.com/anwilli5/coin-collection-android-US</string>
    <string name="info_overview">This App is meant to help you keep track of which coins you have already come across and saved in your collection. To help keep your collection organized, we recommend purchasing a coin album specific to each type of coin.\n\nThe mint marking on most coins can be found near the date that appears on the face of the coin. If no mint mark is present, it typically symbolizes that this coin was produced at the Philadelphia (P) mint. Other possible mint marks include that of the Denver mint (D) and the San Francisco mint (S), although the San Francisco mint has not produced coins for circulation for some time now. Also, for some older coins, the mint marks of the Carson City mint (CC) and the New Orleans mint (O) can be found, and special coins like the American Eagle Silver Dollars may carry the West Point mint mark (W). For more information, feel free to check out the website of the U.S. Mint.\n\nIf you have any suggestions or questions about the app, let us know on GitHub.\n\nThis app is not endorsed by the United States Mint.</string>
    <string name="tutorial_select_coin_and_create">Select a coin type, choose a name and hit \'Create New Collection!\'</string>
    <string name="enter_collection_name">Enter Collection Name</string>
    <string name="show_mint_mark">Show the mint mark on the collection page</string>
    <string name="edit_date_range">Change the collection beginning and ending year</string>
    <string name="select_collection_type">Select Collection Type</string>
    <string name="basic_collections">Basic Collections</string>
    <string name="advanced_collections">Advanced Collections</string>
    <string name="more_collections">More Collections</string>
    <string name="include_p">Include coins from the Philadelphia mint</string>
    <string name="include_d">Include coins from the Denver mint</string>
    <string name="include_s">Include coins from the San Francisco mint</string>
    <string name="include_o">Include coins from the New Orleans mint</string>
    <string name="include_cc">Include coins from the Carson City mint</string>
    <string name="include_w">Include coins from the West Point mint</string>
    <string name="include_s_proofs">Include proofs from San Francisco mint</string>
    <string name="include_silver_proofs">Include silver proofs from San Francisco mint</string>
    <string name="include_rev_proofs">Include Reverse Proofs</string>
    <string name="include_mem_proofs">Include Memorial Proofs</string>
    <string name="include_satin">Include coins with a satin finish</string>
    <string name="include_mint_sets">Include Mint Sets</string>
    <string name="include_proof_sets">Include Proof Sets</string>
    <string name="include_silver_proof_sets">Include Silver Proof Sets</string>
    <string name="include_franklin_proofs">Include Franklin Proofs</string>
    <string name="show_territories">Include the quarters for D.C. and the U.S. Territories</string>
    <string name="check_show_burnished_eagles">Include the special burnished coins</string>
    <string name="include_silver_coins">Include silver coins</string>
    <string name="include_nickel_coins">Include Nickel coins</string>
    <string name="include_clad_coins">Include Clad coins</string>
    <string name="include_old_coins">Include older type coins</string>
    <string name="include_bust_coins">Include Bust coins</string>
    <string name="include_draped_bust_coins">Include Draped Bust</string>
    <string name="include_capped_bust_coins">Include Capped Bust</string>
    <string name="include_seated_coins">Include Liberty Seated</string>
    <string name="include_coronet_coins">Include Coronet coins</string>
    <string name="include_barber_quarters">Include Barber Quarters</string>
    <string name="include_standing_quarters">Include Liberty Standing Quarters</string>
    <string name="include_classic_quarters">Include classic Washington Quarters</string>
    <string name="include_states_quarters">Include States Quarters</string>
    <string name="include_parks_quarters">Include National Parks Quarters</string>
    <string name="include_women_quarters">Include American Women Quarters</string>
    <string name="include_eagle_cents">Include Flying Eagle small cents</string>
    <string name="include_indian_cents">Include Indian Head cents</string>
    <string name="include_wheat_cents">Include Lincoln Wheat cents</string>
    <string name="include_memorial_cents">Include Lincoln Memorial cents</string>
    <string name="include_shield_cents">Include Shield cents</string>
    <string name="include_barber_half">Include Barber Halfs</string>
    <string name="include_walker_half">Include Liberty Walking Halfs</string>
    <string name="include_franklin_half">Include Franklin Halfs</string>
    <string name="include_kennedy_half">Include Kennedy Halfs</string>
    <string name="include_shield_nickels">Include Shield Nickels</string>
    <string name="include_liberty_nickels">Include Liberty Nickels</string>
    <string name="include_buffalo_nickels">Include Buffalo Nickels</string>
    <string name="include_jefferson_nickels">Include Jefferson Nickels</string>
    <string name="include_barber_dimes">Include Barber dimes</string>
    <string name="include_mercury_dimes">Include Mercury dimes</string>
    <string name="include_roos_dimes">Include Roosevelt dimes</string>
    <string name="include_morgan_dollars">Include Morgan Silver Dollars</string>
    <string name="include_peace_dollars">Include Peace Silver Dollars</string>
    <string name="include_ike_dollars">Include Eisenhower Dollars</string>
    <string name="include_eagle_dollars">Include American Silver Eagles</string>
    <string name="include_sba_dollars">Include Susan B Anthony Dollars</string>
    <string name="include_sac_dollars">Include Sacagawea Dollars</string>
    <string name="include_pres_dollars">Include Presidential Dollars</string>
    <string name="include_trade_dollars">Include Trade Dollars</string>
    <string name="create_page">Create New Collection!</string>
    <string name="enter_start_year">Starting Year: </string>
    <string name="enter_stop_year">Ending Year: </string>
    <string name="name_label">Name:</string>
    <string name="mint_label">Mint:</string>
    <string name="image_label">Image:</string>
    <string name="reorder_move_up">Move Up</string>
    <string name="reorder_move_down">Move Down</string>
</resources>