<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listElementParent"
        android:orientation="horizontal">
    <RelativeLayout
        android:id="@+id/listElementLeftSideView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@id/move_up_arrow"
        android:layout_toLeftOf="@id/move_up_arrow">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/coinImageView"
            android:contentDescription="@string/coin_slot_description"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:maxWidth="51dp"
            android:maxHeight="51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/collectionNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:ellipsize="marquee"
            android:textSize="24sp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/coinImageView"
            android:layout_toRightOf="@id/coinImageView"/>
        <TextView
            android:id="@+id/progressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_below="@id/collectionNameTextView"
            android:layout_toEndOf="@id/coinImageView"
            android:layout_toRightOf="@id/coinImageView"/>
        <TextView
            android:id="@+id/completeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#00FF00"
            android:layout_below="@id/progressTextView"
            android:layout_toEndOf="@id/coinImageView"
            android:layout_toRightOf="@id/coinImageView"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/move_up_arrow"
        android:src="@drawable/icon_up_arrow"
        android:contentDescription="@string/reorder_move_up"
        android:paddingRight="15dp"
        android:paddingEnd="15dp"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:layout_toStartOf="@id/move_down_arrow"
        android:layout_toLeftOf="@id/move_down_arrow"
        android:layout_alignTop="@id/listElementLeftSideView"
        android:layout_alignBottom="@id/listElementLeftSideView"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/move_down_arrow"
        android:src="@drawable/icon_down_arrow"
        android:contentDescription="@string/reorder_move_down"
        android:paddingRight="15dp"
        android:paddingEnd="15dp"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/listElementLeftSideView"
        android:layout_alignBottom="@id/listElementLeftSideView"/>
    </RelativeLayout>